# yt-gallery2

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  MAPPINGS.md  PROJECT-SPEC.md  README.md  make_simple_video_list.py
.github/workflows/: deploy.yml  fetch-videos.yml  test.yml
docs/: REQUIREMENTS.md
fetch/: fetch_videos.py  login.py  make_simple_video_list.py  pyproject.toml
fetch/tests/: test_fetch_videos.py  test_make_simple_video_list.py
gallery/: README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js
gallery/src/: app.css
gallery/src/lib/: config.ts  types.ts
gallery/src/lib/components/: HeroBanner.svelte  PlaylistFilter.svelte  SearchBar.svelte  Sidebar.svelte  VideoCard.svelte
gallery/src/lib/stores/: videos.svelte.ts
gallery/src/routes/: +layout.svelte  +page.svelte
gallery/src/routes/admin/: +page.svelte
gallery/src/routes/video/[id]/: +page.svelte
gallery/tests/: admin.spec.ts  gallery.spec.ts
gallery/tests/fixtures/: sample-videos.ts
