[project]
name = "yt-gallery"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
]

[tool.pytest.ini_options]
# Unit tests mock all external Google API dependencies, so no credentials or
# network access are required. Run with: python3 -m pytest fetch/tests/
testpaths = ["tests"]
